<resources>
    <string name="app_name">MultiLanguageApplication</string>
    <string name="welcome">Account Login</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login">Sign in</string>
    <string name="forget">Forget Password</string>
    <string name="register">Don\'t have account?Sign Up</string>
    <string name="language">فارسی</string>


</resources>
