<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="22dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textColor="#fff"
        android:textSize="26sp"
        android:textStyle="bold"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="70dp"
        android:background="#fff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingTop="5dp"
                android:text="@string/forget"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingTop="5dp"
                android:text="@string/register"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:background="@color/colorAccent"
                android:textSize="18sp"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textColor="#fff"
                android:text="@string/language"
                android:drawableLeft="@drawable/ic_language_black_24dp"
                android:id="@+id/btn_chang_language"
                android:background="@drawable/change_language"/>



        </LinearLayout>

    </RelativeLayout>




<ImageButton
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_below="@+id/welcome"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="16dp"
    android:elevation="4dp"
    android:src="@drawable/profile_icon"
    android:scaleType="centerCrop"
    android:background="@drawable/user_profile"

    />
</RelativeLayout>
